# GimelStudio

./: .gitignore  .last_build_id  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  analysis_options.yaml  build.ps1  build.py  flutter_bootstrap.js  flutter_service_worker.js  genInstaller.py  index.html  install.py  main.dart.js  manifest.json  pubspec.yaml  requirements.txt  stacked.json  version.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  build_webapp.yml  greetings.yml
assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES  encode_bitmaps.py  encode_splash.py
installer/: createMacInstaller.py
lib/: main.dart
lib/app/: app.bottomsheets.dart  app.dart  app.dialogs.dart  app.locator.dart  app.router.dart
lib/common/: utils.dart
lib/models/: canvas_item.dart  document.dart  eval_info.dart  layer.dart  node_base.dart  node_categories.dart  node_datatypes.dart  node_output.dart  node_property.dart  node_registry.dart  nodegraph.dart  nodegraph_evaluator.dart  nodes.dart  photo.dart  renderer.dart  tool.dart
lib/services/: canvas_item_service.dart  canvas_service.dart  cursor_tool_service.dart  document_service.dart  evaluation_service.dart  export_service.dart  file_service.dart  hand_tool_service.dart  id_service.dart  image_service.dart  image_tool_service.dart  layers_service.dart  node_registry_service.dart  nodegraphs_service.dart  open_file_service.dart  overlays_service.dart  rectangle_tool_service.dart  text_tool_service.dart  tool_service.dart  viewport_service.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
share/: share.qrc
share/nodes/: flipnode-exampleapi.cpp  flipnode-examplesapi.h
share/shortcuts/: shortcuts_qwerty.xml
src/: CMakeLists.txt  main.py
src/appshell/: CMakeLists.txt  (+5 more)
src/main/: CMakeLists.txt  main.cpp
tools/: generateiconcodes.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+435 files in other folders)
